xfs_{admin,repair},man5: tell the user to mount with nouuid for snapshots
Augment the messaging in xfs_admin and xfs_repair to advise the user to
replay a dirty log on a snapshotted filesystem by mounting with nouuid
if the origin filesystem is still mounted.  A user accidentally zapped
the log when trying to mount a backup snapshot because the instructions
we gave them weren't sufficient.

Reported-by: Kjetil Torgrim Homme <kjetilho@ifi.uio.no>
Signed-off-by: Darrick J. Wong <djwong@kernel.org>
Reviewed-by: Carlos Maiolino <cmaiolino@redhat.com>
Reviewed-by: Bill O'Donnell <bodonnel@redhat.com>
[add missing whitespace in 'the nouuid option.If you are']

--- a/man/man5/xfs.5
+++ b/man/man5/xfs.5
@@ -91,6 +91,11 @@ may become confused when doing incremental and resumed dumps.
 and
 .BR xfsrestore (8)
 are recommended for making copies of XFS filesystems.
+To mount a snapshot of an already-mounted filesystem, you may need to supply
+the
+.B nouuid
+option to
+.BR mount " (8)."
 .SH OPERATIONS
 Some functionality specific to the XFS filesystem is accessible to
 applications through the
