--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,3 +1,89 @@
+xfsprogs-6.14.0 (08 Apr 2025)
+	xfs_scrub_all: localize the strings in the program (Darrick J. Wong)
+	xfs_protofile: add messages to localization catalog (Darrick J. Wong)
+	Makefile: inject package name/version/bugreport into pot file (Darrick J. Wong)
+	xfs_scrub_all: rename source code to .py.in (Darrick J. Wong)
+	xfs_protofile: rename source code to .py.in (Darrick J. Wong)
+	xfs_repair: handling a block with bad crc, bad uuid, and bad magic number needs fixing (Bill O'Donnell)
+	xfs_repair: fix stupid argument error in verify_inode_chunk (Darrick J. Wong)
+	xfs_repair: fix infinite loop in longform_dir2_entry_check* (Darrick J. Wong)
+	xfs_repair: fix crash in reset_rt_metadir_inodes (Darrick J. Wong)
+	xfs_repair: don't recreate /quota metadir if there are no quota inodes (Darrick J. Wong)
+	xfs_repair: fix wording of error message about leftover CoW blocks on the rt device (Darrick J. Wong)
+	xfs_io: Add cachestat syscall support (Ritesh Harjani (IBM))
+	xfs_io: Add RWF_DONTCACHE support to preadv2 (Ritesh Harjani (IBM))
+	xfs_io: Add RWF_DONTCACHE support to pwritev2 (Ritesh Harjani (IBM))
+	xfs_io: Add support for preadv2 (Ritesh Harjani (IBM))
+	make: remove the .extradep file in libxfs on "make clean" (Theodore Ts'o)
+	xfs_{admin,repair},man5: tell the user to mount with nouuid for snapshots (Darrick J. Wong)
+	xfsprogs: Fix mismatched return type of filesize() (Pavel Reichl)
+	xfs_io: don't fail FS_IOC_FSGETXATTR on filesystems that lack support (Anthony Iliopoulos)
+	configure: additionally get icu-uc from pkg-config (Alyssa Ross)
+	xfs_scrub: use the display mountpoint for reporting file corruptions (Darrick J. Wong)
+	xfs_scrub: don't warn about zero width joiner control characters (Darrick J. Wong)
+	xfs_scrub: fix buffer overflow in string_escape (Darrick J. Wong)
+	xfs_db: add command to copy directory trees out of filesystems (Darrick J. Wong)
+	xfs_db: make listdir more generally useful (Darrick J. Wong)
+	xfs_db: use an empty transaction to try to prevent livelocks in path_navigate (Darrick J. Wong)
+	xfs_db: pass const pointers when we're not modifying them (Darrick J. Wong)
+	mkfs: enable reflink on the realtime device (Darrick J. Wong)
+	mkfs: validate CoW extent size hint when rtinherit is set (Darrick J. Wong)
+	xfs_logprint: report realtime CUIs (Darrick J. Wong)
+	xfs_repair: validate CoW extent size hint on rtinherit directories (Darrick J. Wong)
+	xfs_repair: allow realtime files to have the reflink flag set (Darrick J. Wong)
+	xfs_repair: rebuild the realtime refcount btree (Darrick J. Wong)
+	xfs_repair: reject unwritten shared extents (Darrick J. Wong)
+	xfs_repair: check existing realtime refcountbt entries against observed refcounts (Darrick J. Wong)
+	xfs_repair: compute refcount data for the realtime groups (Darrick J. Wong)
+	xfs_repair: find and mark the rtrefcountbt inode (Darrick J. Wong)
+	xfs_repair: use realtime refcount btree data to check block types (Darrick J. Wong)
+	xfs_repair: allow CoW staging extents in the realtime rmap records (Darrick J. Wong)
+	xfs_spaceman: report health of the realtime refcount btree (Darrick J. Wong)
+	xfs_db: add rtrefcount reservations to the rgresv command (Darrick J. Wong)
+	xfs_db: copy the realtime refcount btree (Darrick J. Wong)
+	xfs_db: support the realtime refcountbt (Darrick J. Wong)
+	xfs_db: display the realtime refcount btree contents (Darrick J. Wong)
+	man: document userspace API changes due to rt reflink (Darrick J. Wong)
+	mkfs: create the realtime rmap inode (Darrick J. Wong)
+	xfs_logprint: report realtime RUIs (Darrick J. Wong)
+	xfs_repair: reserve per-AG space while rebuilding rt metadata (Darrick J. Wong)
+	xfs_repair: rebuild the bmap btree for realtime files (Darrick J. Wong)
+	xfs_repair: check for global free space concerns with default btree slack levels (Darrick J. Wong)
+	xfs_repair: rebuild the realtime rmap btree (Darrick J. Wong)
+	xfs_repair: always check realtime file mappings against incore info (Darrick J. Wong)
+	xfs_repair: check existing realtime rmapbt entries against observed rmaps (Darrick J. Wong)
+	xfs_repair: find and mark the rtrmapbt inodes (Darrick J. Wong)
+	xfs_repair: refactor realtime inode check (Darrick J. Wong)
+	xfs_repair: create a new set of incore rmap information for rt groups (Darrick J. Wong)
+	xfs_repair: use realtime rmap btree data to check block types (Darrick J. Wong)
+	xfs_repair: flag suspect long-format btree blocks (Darrick J. Wong)
+	xfs_repair: tidy up rmap_diffkeys (Darrick J. Wong)
+	xfs_spaceman: report health status of the realtime rmap btree (Darrick J. Wong)
+	xfs_db: add an rgresv command (Darrick J. Wong)
+	xfs_db: make fsmap query the realtime reverse mapping tree (Darrick J. Wong)
+	xfs_db: copy the realtime rmap btree (Darrick J. Wong)
+	xfs_db: support the realtime rmapbt (Darrick J. Wong)
+	xfs_db: display the realtime rmap btree contents (Darrick J. Wong)
+	xfs_db: don't abort when bmapping on a non-extents/bmbt fork (Darrick J. Wong)
+	xfs_db: compute average btree height (Darrick J. Wong)
+	man: document userspace API changes due to rt rmap (Darrick J. Wong)
+	xfs_scrub: try harder to fill the bulkstat array with bulkstat() (Darrick J. Wong)
+	xfs_scrub: ignore freed inodes when single-stepping during phase 3 (Darrick J. Wong)
+	xfs_scrub: hoist the phase3 bulkstat single stepping code (Darrick J. Wong)
+	xfs_scrub: don't blow away new inodes in bulkstat_single_step (Darrick J. Wong)
+	xfs_scrub: return early from bulkstat_for_inumbers if no bulkstat data (Darrick J. Wong)
+	xfs_scrub: don't complain if bulkstat fails (Darrick J. Wong)
+	xfs_scrub: don't (re)set the bulkstat request icount incorrectly (Darrick J. Wong)
+	xfs_scrub: don't double-scan inodes during phase 3 (Darrick J. Wong)
+	xfs_scrub: actually iterate all the bulkstat records (Darrick J. Wong)
+	xfs_scrub: selectively re-run bulkstat after re-running inumbers (Darrick J. Wong)
+	xfs_scrub: remove flags argument from scrub_scan_all_inodes (Darrick J. Wong)
+	xfs_scrub: call bulkstat directly if we're only scanning user files (Darrick J. Wong)
+	xfs_scrub: don't report data loss in unlinked inodes twice (Darrick J. Wong)
+	man: document new XFS_BULK_IREQ_METADIR flag to bulkstat (Darrick J. Wong)
+	xfs_db: obfuscate rt superblock label when metadumping (Darrick J. Wong)
+	mkfs,xfs_repair: don't pass a daddr as the flags argument (Darrick J. Wong)
+
 xfsprogs-6.13.0 (13 Feb 2025)
 	xfs_protofile: fix device number encoding (Darrick J. Wong)
 	xfs_protofile: fix mode formatting error (Darrick J. Wong)
