--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xfsprogs (6.14.0-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Nathan Scott <nathans@debian.org>  Tue, 08 Apr 2025 16:14:08 +0200
+
 xfsprogs (6.13.0-1) unstable; urgency=low
 
   * New upstream release
