man: fix missing cachestat manpage
Fix missing cachestat documentation so that xfs/293 doesn't fail.

Signed-off-by: Darrick J. Wong <djwong@kernel.org>
Reviewed-by: Ritesh Harjani (IBM) <ritesh.list@gmail.com>
Reviewed-by: Christoph Hellwig <hch@lst.de>

--- a/man/man8/xfs_io.8
+++ b/man/man8/xfs_io.8
@@ -1101,6 +1101,9 @@ Check parameters without changing anything.
 Do not print timing information at all.
 .PD
 .RE
+.TP
+.BI "cachestat off len
+Print page cache statistics for the given file range.
 
 .SH MEMORY MAPPED I/O COMMANDS
 .TP
