man: adjust description of the statx manpage
Amend the manpage description of how the lack of statx -m options work.

Signed-off-by: "Darrick J. Wong" <djwong@kernel.org>
Reviewed-by: Christoph Hellwig <hch@lst.de>
Reviewed-by: John Garry <john.g.garry@oracle.com>

--- a/man/man8/xfs_io.8
+++ b/man/man8/xfs_io.8
@@ -995,7 +995,9 @@ Set the field mask for the statx call to STATX_BASIC_STATS.
 .TP
 .B \-m all
 Set all bits in the field mask for the statx call except for STATX__RESERVED.
-The default is to set STATX_BASIC_STATS and STATX_BTIME.
+If no
+.B -m
+arguments are specified, the default is STATX_BASIC_STATS and STATX_BTIME.
 .TP
 .B \-m <mask>
 Specify a numeric field mask for the statx call.
