--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,3 +1,35 @@
+xfsprogs-6.15.0 (23 Jun 2025)
+	xfs_mdrestore: don't allow restoring onto zoned block devices (Christoph Hellwig)
+	man: adjust description of the statx manpage (Darrick J. Wong)
+	xfs_protofile: fix permission octet when suid/guid is set (Luca Di Maio)
+	xfs_repair: fix libxfs abstraction mess (Darrick J. Wong)
+	xfs_growfs: support internal RT devices (Christoph Hellwig)
+	xfs_mdrestore: support internal RT devices (Christoph Hellwig)
+	xfs_scrub: support internal RT device (Christoph Hellwig)
+	xfs_spaceman: handle internal RT devices (Christoph Hellwig)
+	xfs_io: handle internal RT devices in fsmap output (Christoph Hellwig)
+	xfs_io: don't re-query fs_path information in fsmap_f (Christoph Hellwig)
+	xfs_io: correctly report RGs with internal rt dev in bmap output (Christoph Hellwig)
+	man: document XFS_FSOP_GEOM_FLAGS_ZONED (Christoph Hellwig)
+	xfs_mkfs: document the new zoned options in the man page (Christoph Hellwig)
+	xfs_mkfs: reflink conflicts with zoned file systems for now (Christoph Hellwig)
+	xfs_mkfs: default to rtinherit=1 for zoned file systems (Christoph Hellwig)
+	xfs_mkfs: calculate zone overprovisioning when specifying size (Christoph Hellwig)
+	xfs_mkfs: support creating file system with zoned RT devices (Christoph Hellwig)
+	xfs_mkfs: factor out a validate_rtgroup_geometry helper (Christoph Hellwig)
+	xfs_repair: validate rt groups vs reported hardware zones (Christoph Hellwig)
+	xfs_repair: fix the RT device check in process_dinode_int (Christoph Hellwig)
+	xfs_repair: support repairing zoned file systems (Christoph Hellwig)
+	libfrog: report the zoned geometry (Christoph Hellwig)
+	xfs_repair: phase6: scan longform entries before header check (Bill O'Donnell)
+	xfs_repair: Bump link count if longform_dir2_rebuild yields shortform dir (Eric Sandeen)
+	mkfs: fix the issue of maxpct set to 0 not taking effect (liuh)
+	mkfs: fix blkid probe API violations causing weird output (Darrick J. Wong)
+	xfs_io: make statx mask parsing more generally useful (Darrick J. Wong)
+	xfs_io: redefine what statx -m all does (Darrick J. Wong)
+	xfs_io: catch statx fields up to 6.15 (Darrick J. Wong)
+	man: fix missing cachestat manpage (Darrick J. Wong)
+
 xfsprogs-6.14.0 (08 Apr 2025)
 	xfs_scrub_all: localize the strings in the program (Darrick J. Wong)
 	xfs_protofile: add messages to localization catalog (Darrick J. Wong)
