--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xfsprogs (6.15.0-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Nathan Scott <nathans@debian.org>  Mon, 23 Jun 2025 13:56:27 +0200
+
 xfsprogs (6.14.0-1) unstable; urgency=low
 
   * New upstream release
